// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Icon renders GitHub icon 1`] = `
<svg
  className=""
  fill="none"
  height={42}
  viewBox="0 0 42 42"
  width={42}
  xmlns="http://www.w3.org/2000/svg"
>
  <path
    clipRule="evenodd"
    d="M21.0005 0.875C16.0151 0.877587 11.1932 2.6433 7.39702 5.85642C3.60081 9.06953 1.07783 13.5205 0.279203 18.4135C-0.519425 23.3065 0.458372 28.3224 3.03777 32.5643C5.61718 36.8062 9.62997 39.9976 14.3586 41.5677C15.4018 41.7613 15.7948 41.1148 15.7948 40.565C15.7948 40.0152 15.7739 38.4213 15.767 36.6786C9.92494 37.9407 8.69047 34.2134 8.69047 34.2134C7.73767 31.793 6.36061 31.1568 6.36061 31.1568C4.455 29.8637 6.5032 29.8879 6.5032 29.8879C8.61398 30.0365 9.72327 32.042 9.72327 32.042C11.5941 35.2333 14.6368 34.3102 15.833 33.7708C16.0208 32.4188 16.5668 31.4991 17.1684 30.977C12.5017 30.4515 7.59857 28.6604 7.59857 20.6595C7.56964 18.5845 8.34404 16.5778 9.76152 15.0547C9.54592 14.5291 8.82609 12.4062 9.96667 9.5225C9.96667 9.5225 11.7297 8.96237 15.7426 11.6628C19.1847 10.7268 22.8163 10.7268 26.2583 11.6628C30.2677 8.96237 32.0273 9.5225 32.0273 9.5225C33.1713 12.3992 32.4515 14.5222 32.2359 15.0547C33.6579 16.5781 34.4339 18.5882 34.4023 20.6664C34.4023 28.6846 29.4888 30.4515 24.8152 30.9667C25.5663 31.6167 26.2374 32.8856 26.2374 34.8357C26.2374 37.6295 26.2131 39.8769 26.2131 40.565C26.2131 41.1217 26.5921 41.7717 27.6562 41.5677C32.3854 39.9974 36.3986 36.8055 38.978 32.5628C41.5573 28.3202 42.5346 23.3035 41.7351 18.4101C40.9355 13.5167 38.4113 9.06562 34.6138 5.85306C30.8164 2.6405 25.9934 0.875947 21.0074 0.875H21.0005Z"
    fillRule="evenodd"
  />
  <path
    d="M7.95276 30.8561C7.90755 30.9598 7.74064 30.9909 7.60502 30.9183C7.4694 30.8457 7.36857 30.7109 7.41725 30.6037C7.46593 30.4965 7.62937 30.4688 7.76499 30.5415C7.90061 30.6141 8.00492 30.7524 7.95276 30.8561Z"
  />
  <path
    d="M8.80475 31.8C8.73274 31.8361 8.65035 31.8461 8.57169 31.8285C8.49303 31.8108 8.423 31.7665 8.37356 31.7032C8.23794 31.558 8.21011 31.3574 8.31443 31.2675C8.41875 31.1776 8.60654 31.2191 8.74216 31.3643C8.87778 31.5096 8.90908 31.7101 8.80475 31.8Z"
  />
  <path
    d="M9.63243 32.9996C9.50377 33.0895 9.28468 32.9996 9.16297 32.8198C9.12932 32.7876 9.10256 32.7489 9.08427 32.7061C9.06599 32.6634 9.05655 32.6174 9.05655 32.5709C9.05655 32.5244 9.06599 32.4784 9.08427 32.4356C9.10256 32.3929 9.12932 32.3542 9.16297 32.3219C9.29164 32.2355 9.51072 32.3219 9.63243 32.4983C9.75414 32.6746 9.75762 32.9097 9.63243 32.9996Z"
  />
  <path
    d="M10.7556 34.1612C10.6408 34.2891 10.4079 34.2545 10.2166 34.0817C10.0253 33.9088 9.98013 33.6737 10.0949 33.5492C10.2096 33.4247 10.4426 33.4593 10.6408 33.6287C10.839 33.7981 10.8773 34.0367 10.7556 34.1612Z"
  />
  <path
    d="M12.3308 34.8392C12.2786 35.0017 12.0422 35.0743 11.8057 35.0052C11.5693 34.936 11.4128 34.7424 11.458 34.5764C11.5032 34.4104 11.7431 34.3344 11.9831 34.4104C12.223 34.4865 12.376 34.6698 12.3308 34.8392Z"
  />
  <path
    d="M14.0487 34.9567C14.0487 35.1261 13.854 35.2713 13.6036 35.2748C13.3532 35.2782 13.1481 35.1399 13.1481 34.9705C13.1481 34.8011 13.3428 34.6559 13.5932 34.6524C13.8435 34.649 14.0487 34.7838 14.0487 34.9567Z"
  />
  <path
    d="M15.6483 34.6904C15.6796 34.8598 15.5057 35.0361 15.2554 35.0776C15.005 35.1191 14.7859 35.0188 14.7546 34.8529C14.7233 34.6869 14.9042 34.5071 15.1476 34.4622C15.391 34.4172 15.617 34.5209 15.6483 34.6904Z"
  />
</svg>
`;

exports[`Icon renders Medium icon 1`] = `
<svg
  className=""
  fill="none"
  height={42}
  viewBox="0 0 42 42"
  width={42}
  xmlns="http://www.w3.org/2000/svg"
>
  <path
    d="M23.0851 21.0002C23.0851 27.599 18.9749 32.9483 13.905 32.9483C8.83511 32.9483 4.72461 27.5978 4.72461 21.0002C4.72461 14.4027 8.8348 9.05176 13.905 9.05176C18.9752 9.05176 23.0851 14.4015 23.0851 21.0002Z"
  />
  <path
    d="M33.156 21.0002C33.156 27.2115 31.1009 32.2487 28.5658 32.2487C26.0307 32.2487 23.9756 27.2115 23.9756 21.0002C23.9756 14.7888 26.0304 9.75159 28.5655 9.75159C31.1006 9.75159 33.1557 14.7872 33.1557 21.0002"
  />
  <path
    d="M37.2753 21.0002C37.2753 26.564 36.5527 31.0772 35.6609 31.0772C34.7692 31.0772 34.0469 26.5652 34.0469 21.0002C34.0469 15.4352 34.7695 10.9233 35.6609 10.9233C36.5524 10.9233 37.2753 15.4348 37.2753 21.0002Z"
  />
</svg>
`;

exports[`Icon renders YouTube icon 1`] = `
<svg
  className=""
  fill="none"
  height={42}
  viewBox="0 0 42 42"
  width={42}
  xmlns="http://www.w3.org/2000/svg"
>
  <path
    d="M23.0851 21.0002C23.0851 27.599 18.9749 32.9483 13.905 32.9483C8.83511 32.9483 4.72461 27.5978 4.72461 21.0002C4.72461 14.4027 8.8348 9.05176 13.905 9.05176C18.9752 9.05176 23.0851 14.4015 23.0851 21.0002Z"
  />
  <path
    d="M33.156 21.0002C33.156 27.2115 31.1009 32.2487 28.5658 32.2487C26.0307 32.2487 23.9756 27.2115 23.9756 21.0002C23.9756 14.7888 26.0304 9.75159 28.5655 9.75159C31.1006 9.75159 33.1557 14.7872 33.1557 21.0002"
  />
  <path
    d="M37.2753 21.0002C37.2753 26.564 36.5527 31.0772 35.6609 31.0772C34.7692 31.0772 34.0469 26.5652 34.0469 21.0002C34.0469 15.4352 34.7695 10.9233 35.6609 10.9233C36.5524 10.9233 37.2753 15.4348 37.2753 21.0002Z"
  />
</svg>
`;
